<resources>
    <string name="app_name">CZ2006</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">UserName</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="register_hint">Register</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a valid username and password!</string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_age">Age</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">Incorrect password provided</string>
    <string name="error_invalid_password">Invalid password provided</string>
    <string name="error_invalid_email">Invalid e-mail provided</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="rate">Rate</string>


    <string-array name="MedicalRecord">
        <item>Name: </item>
        <item>Age:</item>
    </string-array>

    <string-array name="sort_by">
        <item>Earliest</item>
        <item>Latest</item>
        <item>Alphabet</item>
    </string-array>

    <string-array name="doctors_array">
        <item>Dr. YY Lee</item>
        <item>Dr. Miranda L</item>
        <item>Dr. DJ Huang</item>
        <item>Dr. V Quang</item>

    </string-array>
    <string-array name="services_array">
        <item>Dental</item>
        <item>ENT</item>
        <item>Women Health</item>

    </string-array>
    <string-array name="time_array">
        <item>9.00am</item>
        <item>10.00am</item>
        <item>11.00am</item>
        <item>12.00pm</item>
        <item>1.00pm</item>
        <item>2.00pm</item>
        <item>3.00pm</item>
        <item>4.00pm</item>
        <item>5.00pm</item>
    </string-array>

</resources>
