<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/sign_up_progress"
        style="@style/CircularProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#ff006d77">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstname"
                android:hint="@string/hint_firstname"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastname"
                android:hint="@string/hint_lastname"
                />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="30dp"
                />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/age"
                android:inputType="number"
                android:hint="@string/hint_age"
                
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone"
                android:inputType="phone"
                android:hint="@string/hint_phone"
                
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="SIGN UP"
                android:id="@+id/sign_up_button"
                android:hint="@string/register_hint"
                android:textColor="@android:color/black"
                android:elegantTextHeight="false"
                android:focusable="true"
                android:background="#FF329593"
                android:layout_gravity="center"
                android:layout_marginTop="50dp" />
            
            </LinearLayout>
        
        
        </ScrollView>
    </LinearLayout>
    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:id="@+id/sign_up_layout"-->
    <!--tools:context="com.kevincherian.cz2006.SignUpActivity"-->
    <!--android:background="#ff006d77">-->


<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:orientation="vertical"-->
<!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:id="@+id/linearLayout">-->

<!--<EditText-->
    <!--android:id="@+id/usernameField"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/username_hint"-->
    <!--android:inputType="textEmailAddress"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:layout_marginTop="30dp"-->
    <!--/>-->

<!--<EditText-->
    <!--android:id="@+id/passwordField"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/password_hint"-->
    <!--android:inputType="textPassword"-->
    <!--android:maxLines="1"-->
    <!--android:singleLine="true"-->
    <!--android:layout_marginTop="10dp"/>-->

 <!--<EditText-->
        <!--android:id="@+id/emailField"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:inputType="textEmailAddress"-->
        <!--android:hint="@string/email_hint"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true"-->
     <!--android:layout_below="@+id/linearLayout"-->

     <!--android:layout_marginTop="10dp"-->
     <!--android:layout_alignEnd="@+id/Register"-->
     <!--android:layout_alignParentLeft="false"-->
     <!--android:layout_alignParentRight="false"-->
     <!--android:layout_alignParentTop="false"-->
     <!--android:layout_alignWithParentIfMissing="false" />-->
<!--</LinearLayout>-->

<!--</RelativeLayout>-->