<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="#ffffff">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/drawer_profile_picture"
            android:scaleType="fitXY"
            android:contentDescription="Main Image"
            android:padding="1dp"
            android:id="@+id/imageView"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="User Name :"
            android:id="@+id/showusername"
            android:layout_alignTop="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Error"
            android:id="@+id/profileuserError"
            android:layout_alignTop="@+id/imageView"
            android:layout_toEndOf="@+id/showusername"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstnameEdit"
                android:hint="@string/hint_firstname" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lastnameEdit"
                android:hint="@string/hint_lastname"/>
            <EditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dobEdit"
                android:inputType="number"
                android:hint="Date of birth" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nricEdit"
                android:hint="NRIC"/>
            <EditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:maxLines="1"
                android:singleLine="true"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEdit"
                android:inputType="phone"
                android:hint="@string/hint_phone"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/residenceEdit"
                android:hint="country of residence"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adressEdit"
                android:hint="Adress"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nationalityEdit"
                android:hint="Nationality"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Submit"
                android:id="@+id/profileEditSubmitButton"
                android:textColor="@android:color/white"
                android:elegantTextHeight="false"
                android:focusable="true"
                android:background="#FF329593"
                android:layout_gravity="center"
                android:layout_marginTop="50dp" />

        </LinearLayout>


    </ScrollView>
</LinearLayout>