<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:id="@+id/layout"
    android:background="#ff006d77">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">



        <ImageView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/applogo"
            android:layout_marginTop="20dp"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginTop="200dp"
            />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="100dp"/>
    </LinearLayout>



    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="Sign Up"
        android:id="@+id/signupButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="63dp"
        android:textColor="@android:color/black"
        android:elegantTextHeight="false"
        android:focusable="true"
        android:background="#FF329593"
        android:layout_gravity="center" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:text="Login"
        android:layout_marginBottom="63dp"
        android:id="@+id/loginButton"
        android:background="#FF329593"
        android:textColor="@android:color/black"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="false" />

    <Button
        android:id="@+id/btn_ForgetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forget Password"
        android:background="#FF329593"
        android:textColor="@android:color/black"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
